# minesweeper

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Cell.hpp  InputMode.hpp  Result.hpp  Runner.hpp  Settings.hpp
src/: Board.cpp  Cell.cpp  Runner.cpp  Settings.cpp  main.cpp
